cabal-version: 3.4

name:           hasql-effect
version:        0.0.0.0
-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:     Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts

  build-depends:
      base

  default-language: Haskell2010


library
  import: common-opts

  -- cabal-fmt: expand src
  exposed-modules:
      Hasql.Effect

  hs-source-dirs:
      src

  build-depends:
        base
      , hasql
      , hasql-pool
      , hasql-transaction
      , free

test-suite hasql-effect-tests
  import: common-opts
  type: exitcode-stdio-1.0
  hs-source-dirs: test

  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N -fdefer-typed-holes -O0

  main-is: Main.hs

  -- cabal-fmt: expand test -Main
  other-modules:

  build-depends:
    , hasql-effect
    , hedgehog
    , hspec
    , hspec-core
    , hspec-discover
    , hspec-expectations
    , hspec-hedgehog
