cabal-version: 3.4

name:           hasql-effect
version:        0.0.0.0
-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:     Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts

  build-depends:
      base

  default-language: Haskell2010


library
  import: common-opts

  -- cabal-fmt: expand src
  exposed-modules:
      Hasql.Effect

  hs-source-dirs:
      src

  build-depends:
        base
      , hasql
      , hasql-pool
      , hasql-transaction
      , free
